<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Projetos Android</string>
    <string name="admin_projetos_modulos">Módulos Cadastrados</string>
    <string name="admin_projetos_atividades">Atividades Cadastradas</string>
    <string name="admin_modulo_atividades">Atividade Cadastrados</string>
    <string name="atividade_cadastro_titulo">Cadastro de Atividade</string>
    <string name="atividade_consulta_titulo">Consulta de Atividade</string>
    <string name="atividade_consulta_hint">Consulta de Atividade</string>
    <string name="atividade_nome">Nome</string>
    <string name="atividade_nome_hint">Nome da Atividade</string>
    <string name="atividade_descricao">Descrição</string>
    <string name="atividade_descricao_hint">Descrição da Atividade</string>
    <string name="atividade_btn_salvar">Salvar</string>
    <string name="atividade_btn_consultar">Consultar</string>
    <string name="cadastra">Cadastrar</string>
    <string name="config">Configurações</string>
    <string name="entrar">Entrar</string>
    <string name="funcionalidade_cadastro_titulo">Cadastro de Funcionalidades</string>
    <string name="funcionalidade_consulta_titulo">Consulta de Funcionalidade</string>
    <string name="funcionalidadeo_consulta_hint">Consulta de Funcionalidade</string>
    <string name="funcionalidade_nome">Nome</string>
    <string name="funcionalidade_nome_hint">Nome da funcionalidade</string>
    <string name="funcionalidade_descricao">Descrição</string>
    <string name="funcionalidade_descricao_hint">Descrição da Funcionalidade</string>
    <string name="funcionalidade_btn_salvar">Salvar</string>
    <string name="funcionalidade_btn_consultar">Consultar</string>
    <string name="hint_nome">Nome de usuário</string>
    <string name="hint_nome_completo">Nome completo</string>
    <string name="hint_senha">Senha</string>
    <string name="host_servidor">HostName do Servidor</string>
    <string name="imagem">Logo</string>
    <string name="label_nome_projeto">Projeto: </string>
    <string name="label_id_projeto">Id: </string>
    <string name="label_id_atividade">Id: </string>
    <string name="label_nome_modulo">Modulo: </string>
    <string name="label_nome_atividade">Modulo: </string>
    <string name="label_id_modulo">Id: </string>
    <string name="login">Nome de Usuário</string>
    <string name="main_novo">Novo usuário</string>
    <string name="menu_sair">Sair</string>
    <string name="mensagem_excluir_registro">Deseja excluir esse registro?</string>
    <string name="modulo_cadastro_titulo">Cadastro de Módulos</string>
    <string name="modulo_consulta_titulo">Consulta de Módulos</string>
    <string name="modulo_consulta_hint">Consulta de Módulos</string>
    <string name="modulo_nome">Nome</string>
    <string name="modulo_nome_hint">Nome do módulo</string>
    <string name="modulo_descricao">Descrição</string>
    <string name="modulo_descricao_hint">Descrição do módulo</string>
    <string name="modulo_btn_salvar">Salvar</string>
    <string name="modulo_btn_consultar">Consultar</string>
    <string name="nome_lista_tarefas">Atividades Cadastradas</string>
    <string name="nome_lista_regra_negocio">Lista de Regras Cadastradas</string>
    <string name="nome_completo">Nome completo</string>
    <string name="nome_lista_funcionalidade">Lista de funcionalidades</string>
    <string name="novo">Novo</string>
    <string name="opcoes_dialog_titulo">Opções</string>
    <string name="preferencias">Configurações do Servidor</string>
    <string name="projeto_cadastro_titulo">Cadastro de Projetos</string>
    <string name="projeto_listar">Listar Projetos</string>
    <string name="projeto_novo">Novo Projeto</string>
    <string name="projeto_titulo">Projetos</string>
    <string name="projeto_nome">Nome do projeto</string>
    <string name="projeto_nome_hint">Nome do projeto</string>
    <string name="projeto_descricao">Descrição do projeto</string>
    <string name="projeto_descricao_hint">Descrição do projeto</string>
    <string name="projeto_btn_salvar">Salvar</string>
    <string name="projeto_btn_consultar">Consultar</string>
    <string name="projeto_consulta_titulo">Meus Projetos</string>
    <string name="projeto_consulta_hint">Filtrar projetos</string>
    <string name="sair">Sair</string>
    <string name="senha">Senha</string>
    <string name="servidor_sumario">HostName do Servidor de Web Service</string>
    <string name="servidor_titulo">Nome do Servidor</string>
    <string name="teste">Testar Servidor</string>
    <string name="teste_button">Testar</string>
    <string name="titulo_adm_projeto">Administrar Projeto</string>
    <string name="titulo_adm_modulo">Administrar Módulo</string>
    <string name="titulo_adm_atividade">Administrar Atividade</string>
    <string name="titulo_adm_funcionalidade">Administrar Funcionalidade</string>
    <string name="regra_negocio_cadastro_titulo">Cadastro de Regras de Negócios</string>
    <string name="regra_negocio_codigo">Código</string>
    <string name="regra_negocio_codigo_hint">Ex: RN01</string>
    <string name="regra_negocio_nome">Nome</string>
    <string name="regra_negocio_nome_hint">Nome da regra</string>
    <string name="regra_negocio_descricao">Descrição</string>
    <string name="regra_negocio_descricao_hint">Descrição</string>
    <string name="regra_negocio_btn_salvar">Salvar</string>
    <string name="remover">Remover</string>
</resources>
