<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
        android:text="@string/titulo_adm_funcionalidade"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/titulo"
    />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:padding="5dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <TextView
            android:text="@string/label_id_atividade"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/label"
        />
        <TextView
            android:id="@+id/adm_funcionalidade_id"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
        />
        <TextView
            android:text="@string/label_nome_atividade"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            style="@style/label"
        />
        <TextView
            android:id="@+id/adm_funcionalidade_nome"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
        />
    </LinearLayout>

    <TextView
        android:text="@string/nome_lista_regra_negocio"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/label"
    />
    <fragment android:name="br.com.projetos.android.lista.RegraNegocioListFragment"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:tag="lista">
    </fragment>


</LinearLayout>
